<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="wrap_content">


       <TableLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           >

           <TableRow
               style="@style/MainDataFragmentTableRow"
               >

               <TextView
                   style="@style/MainDataFragmentFirstColumnHeadings"
                   android:text="@string/id"
                   />

               <TextView
                   android:id="@+id/FragmentDialogReportDetail_id_textview"
                   style="@style/MainDataFragmentSecondColumn"
                   android:text="ID"
                   />

           </TableRow>

           <TableRow
               style="@style/MainDataFragmentTableRow"
               >

               <TextView
                   style="@style/MainDataFragmentFirstColumnHeadings"
                   android:text="@string/tag_"
                   />

               <TextView
                   android:id="@+id/FragmentDialogReportDetail_tag_textview"
                   style="@style/MainDataFragmentSecondColumn"
                   android:text="tag"
                   android:singleLine="true"
                   />

           </TableRow>

           <TableRow
               style="@style/MainDataFragmentTableRow"
               >

               <TextView
                   style="@style/MainDataFragmentFirstColumnHeadings"
                   android:text="@string/date_"/>

               <TextView
                   android:id="@+id/FragmentDialogReportDetail_set_date_textview"
                   style="@style/MainDataFragmentSecondColumn"
                   />
               />

           </TableRow>

           <TableRow
               style="@style/MainDataFragmentTableRow"
               >

               <TextView
                   style="@style/MainDataFragmentFirstColumnHeadings"
                   android:text="@string/time_"/>

               <TextView
                   android:id="@+id/FragmentDialogReportDetail_set_time_textview"
                   style="@style/MainDataFragmentSecondColumn"
                   />
           </TableRow>

           <TableRow
               style="@style/MainDataFragmentTableRow"
               >

               <TextView
                   style="@style/MainDataFragmentFirstColumnHeadings"
                   android:text="@string/location_"
                   android:singleLine="true"
                   />

               <TextView
                   android:id="@+id/FragmentDialogReportDetail_address_textview"
                   style="@style/MainDataFragmentSecondColumn"
                   android:ellipsize="end"
                   android:maxLines="3"
                   android:layout_gravity="center"

                   />


           </TableRow>


           <TableRow
               style="@style/MainDataFragmentTableRow"
               >

               <TextView
                   style="@style/MainDataFragmentFirstColumnHeadings"
                   android:text="Notes"/>

               <EditText
                   android:id="@+id/FragmentDialogReportDetail_notes_edittext"
                   style="@style/MainDataFragmentSecondColumn"
                   android:text="Notes"
                   />

           </TableRow>

           <TableRow
               style="@style/MainDataFragmentTableRow"
               >
               <Button
                   android:id="@+id/FragmentDialogReportDetail_delete_button"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/delete"
                   />
               <Button
                   android:id="@+id/FragmentDialogReportDetail_update_button"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/update"
                   />
           </TableRow>
       </TableLayout>
   </ScrollView>

</LinearLayout>